migrate to java 11 builds
wip